--- a/login.html
+++ b/login.html
@@ -1,1 +1,62 @@
-        1 file(s) copied.
+<html lang="en">
+
+<head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="stylesheet" type="text/css" ref="style.css" />
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
+                crossorigin="anonymous">
+        <title>Document</title>
+</head>
+
+<body>
+        <!--
+                <form>
+                                <div style="display:inline; width:15%; float:left;">Username:</div>
+                                <div style="display:inline; width:85%; float:left;"><input type="text"> </div>
+                                <div style="display:inline; width:15%; float:left;">Password:</div>
+                                <div style="display:inline; width:85%; float:left;"><input type="password"></div>
+                                <button type="button">Login</button>
+                </form>
+
+!-->
+        <section style="margin:5px">
+                <div class="row">
+                        <div class="col-xs-1">
+                                Username:
+                        </div>
+                        <div class="col-xs-1">
+                                <input type="text">
+                        </div>
+                </div>
+                <div class="row">
+                        <div class="col-xs-1">
+                                Password:
+                        </div>
+                        <div class="col-xs-1">
+                                <input type="password">
+                        </div>
+
+                </div>
+
+                <div class="row">
+                        <div class="col-xs-2">
+                                 <input type='checkbox' /> Remember me
+                        </div>
+                </div>
+                <div class="row">
+                        <div class="col-xs-1">
+                                <button type="button">Login</button>
+                        </div>
+
+                </div>
+
+
+        </section>
+
+</body>
+
+</html>
+
+
