--- a/sign-up.html
+++ b/sign-up.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" type="text/css" ref="style.css" />
+    <!-- <link rel="stylesheet" type="text/css" ref="style.css" /> !-->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-
+    <link rel="stylesheet" href="style.css">
+    <script type="text/javascript" src="sign-up.js"></script>
 </head>
 
 <body>
-    <section style="margin:5px">
+    <section class="container">
+
         <div class="row">
             <div class="col-xs-2">
                 Username:
             </div>
             <div class="col-xs-2">
-                <input type="text" placeholder="John">
+                <input type="text" placeholder="John" id="username">
+            </div>
+            <div class="col-xs-8" class="error-message" id="username-message">
             </div>
         </div>
         <div class="row">
@@ -27,6 +31,8 @@
             <div class="col-xs-2">
                 <input type="email" placeholder="john@xyz.com">
             </div>
+            <div class="col-xs-8" class="error-message" id="email-message">
+            </div>
 
         </div>
 
@@ -35,7 +41,9 @@
                 Password:
             </div>
             <div class="col-xs-2">
-                <input type='password' placeholder="Password"/>
+                <input type='password' placeholder="Password" id="password" />
+            </div>
+            <div class="col-xs-8" class="error-message" id="password-message">
             </div>
 
         </div>
@@ -44,7 +52,9 @@
                 Repeat Password:
             </div>
             <div class="col-xs-2">
-                <input type='password' placeholder="Password"/>
+                <input type='password' placeholder="Password" id="passwordRep" />
+            </div>
+            <div class="col-xs-8" class="error-message" id="passwordRep-message">
             </div>
         </div>
         <div class="row">
@@ -52,7 +62,9 @@
                 Country:
             </div>
             <div class="col-xs-2">
-                <input type='text' placeholder="Israel"/>
+                <input type='text' placeholder="Israel" id="country" />
+            </div>
+            <div class="col-xs-8" class="error-message" id="country-message">
             </div>
         </div>
         <div class="row">
@@ -60,18 +72,24 @@
                 Telephone:
             </div>
             <div class="col-xs-2">
-                <input type='text' placeholder="Telephone"/>
+                <input type='text' placeholder="Telephone" id="telephone" />
+            </div>
+            <div class="col-xs-8" class="error-message" id="telephone-message">
             </div>
         </div>
         <div class="row">
             <div class="col-xs-2">
-                <button type="button">Submit</button>
+                <button type="button" onclick="submitForm()">Submit</button>
             </div>
         </div>
 
 
 
+
     </section>
+
+
+
 </body>
 
 </html>
